# aws-ri-analyzer

./: .gitallowed  .gitignore  HANDOFF.md  README.md  SPEC.md  athena_run.py  compare_cur_ce.py  config.yaml.example  cur_analyzer.py  main.py  pyproject.toml
docs/: aurora-metrics-reference.md  aurora-qps-metrics.md
queries/: rds_running_instances.sql  rds_weekday_vs_weekend_daily.sql  rds_weekday_vs_weekend_summary.sql  resource_engine_check.sql  resource_latest_type.sql  resource_type_changes.sql  resource_uptime.sql
queries/templates/: ce_factcheck_rds.sql  elasticache_nodes.sql  elasticache_resource_ids.sql  rds_instances.sql  rds_resource_ids.sql  ri_coverage.sql  ri_coverage_period.sql  unused_ri.sql
ri_analyzer/: cache.py  config.py  normalizer.py  pricing.py  profile_resolver.py  reporter.py  service_registry.py
ri_analyzer/analyzers/: coverage.py  cur_detail.py  expiration.py  utilization.py
ri_analyzer/fetchers/: accounts.py  athena.py  ce_models.py  cost_explorer.py  cur_queries.py  rds.py
ri_analyzer/reporter/: __init__.py  _base.py  ce_sections.py  cur_sections.py  json_output.py
scripts/: aurora-qps.py  debug_pricing.py
tests/: test_config.py  test_coverage.py  test_expiration.py  test_normalizer.py  test_utilization.py
