[project]
name = "aws-ri-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pyyaml>=6.0",
    "argcomplete>=3.0",
]

[project.scripts]
ri-analyzer  = "main:main"
cur-analyzer = "cur_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ri_analyzer"]
artifacts = ["main.py", "cur_analyzer.py"]
